[SWM-130] feat: make getCodeByGroup immutable